--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="css/mdui.min.css" rel="stylesheet">
 	<link href="css/me.css" rel="stylesheet">
-    <title>代币管理</title>
+    <title>TokenMange</title>
     <style>
         * {
             margin: 0;
@@ -706,3 +706,4 @@
             tishi('导入成功');
         }
 </script>
+
