--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
     		<div class="flex justify-start align-center" style="">
     			<div class="flex justify-start align-center">
     				<div class="logo-icon">C</div>
-                    <div class="logo-text mdui-p-l-1">猎豹Swap</div>
+                    <div class="logo-text mdui-p-l-1">libaoSwap</div>
     			</div>
     		</div>
     		<div class="flex justify-end align-center">
@@ -706,4 +706,5 @@
             tishi('导入成功');
         }
 </script>
+
 
