--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="css/mdui.min.css" rel="stylesheet">
 	<link href="css/me.css" rel="stylesheet">
-    <title>TokenMange</title>
+    <title>代币管理</title>
     <style>
         * {
             margin: 0;
@@ -467,7 +467,7 @@
     		<div class="flex justify-start align-center" style="">
     			<div class="flex justify-start align-center">
     				<div class="logo-icon">C</div>
-                    <div class="logo-text mdui-p-l-1">libaoSwap</div>
+                    <div class="logo-text mdui-p-l-1">猎豹Swap</div>
     			</div>
     		</div>
     		<div class="flex justify-end align-center">
@@ -706,5 +706,3 @@
             tishi('导入成功');
         }
 </script>
-
-
