--- a/test.html
+++ b/test.html
@@ -436,7 +436,7 @@
             currentFile = null;
             fileInput.value = '';
             fileInfo.innerHTML = '';
-            .value = '';
+            pathInput.value = '';
         }
         
         // 8. 显示错误
