--- a/test.html
+++ b/test.html
@@ -264,6 +264,8 @@
             </ol>
             <p><strong>注意：</strong>文件将上传到你的GitHub仓库 <code>tokenimage</code></p>
         </div>
+
+        <input type="file" class="form-input" id="tokenLogoUpload" accept="image/*">
     </div>
 
     <script>
